# pico-plant-sensors

./: CMakeLists.txt  bh1750.c  bh1750.h  main.c
bh1750/: bh1750.c
dht/: dhtlib.c  dhtlib.h
rust/: Cargo.toml  bindings.h  build.rs
rust/src/: lib.rs
soil_sensor/: soil_sensor.c  soil_sensor.h
